Fixed to work on 1.8

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.jackint0sh.timedfly</groupId>
@@ -68,8 +68,8 @@
         </repository>
 
         <repository>
-            <id>spigotmc-repo</id>
-            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
+            <id>spigot-repo</id>
+            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
 
         <repository>
@@ -92,13 +92,18 @@
             <url>https://repo.codemc.org/repository/maven-public/</url>
             <layout>default</layout>
         </repository>
+
+        <repository>
+            <id>rosewood-repo</id>
+            <url>https://repo.rosewooddev.io/repository/public/</url>
+        </repository>
     </repositories>
 
     <dependencies>
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
-            <version>LATEST</version>
+            <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
 
@@ -129,40 +134,40 @@
             <version>2.9.2</version>
             <scope>compile</scope>
         </dependency>
-        <!--
         <dependency>
-            <groupId>jacxk.github.io</groupId>
+            <groupId>com.github.Jacxk</groupId>
             <artifactId>all-spigot-nms</artifactId>
-            <version>LATEST</version>
+            <version>v1.4</version>
         </dependency>
-        -->
-        <!--Local Dependencies-->
-
         <dependency>
-            <groupId>local.playerpoints</groupId>
-            <artifactId>PlayerPoints</artifactId>
-            <version>1.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/dependencies/PlayerPoints.jar</systemPath>
+            <groupId>org.black_ixx</groupId>
+            <artifactId>playerpoints</artifactId>
+            <version>3.2.5</version>
+            <scope>provided</scope>
         </dependency>
-
         <dependency>
-            <groupId>local.tokensmanager</groupId>
+            <groupId>com.github.Realizedd</groupId>
             <artifactId>TokenManager</artifactId>
-            <version>1.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/dependencies/TokenManager.jar</systemPath>
+            <version>3.2.4</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>*</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
+
+        <!--Local Dependencies-->
 
         <dependency>
             <groupId>local.all-spigot-nms</groupId>
             <artifactId>all-spigot-nms</artifactId>
             <version>1.0</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/dependencies/all-spigot-nms.jar</systemPath>
+            <systemPath>/home/yanluis/Documents/Github/Tools/all-spigot-nms/all-spigot-nms.jar</systemPath>
         </dependency>
-
         <!--
+        LOCAL JAR IMPORT
         <dependency>
             <groupId>com.sample</groupId>
             <artifactId>sample</artifactId>
