--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
                 <executions>
                     <execution>
                         <id>copy-to-server</id>
-                        <phase>package</phase>
+                        <phase>install</phase>
                         <goals>
                             <goal>run</goal>
                         </goals>
